--- a/zh/entry/1.1-ahead.md
+++ b/zh/entry/1.1-ahead.md
@@ -1,1 +1,5 @@
 # 前言
+易君Ejunz基于[hydro](https://github.com/hydro-dev/Hydro)与[cordis](https://github.com/cordiverse/cordis)
+目的是方便各类用户开发，搭建，维护，扩展，配置自己想要的业务域。  
+各类用户在各种层面可以轻松实现不同程度的贡献。   
+这里的用户包括且不限于开发者，维护者，管理者，内容创造者，教师，组长，etc.
