--- a/en/domain_docs/A001.md
+++ b/en/domain_docs/A001.md
@@ -1,2 +1,17 @@
-# A001
-cs2
+# Jacka's CS Domain (ID: A001)
+[Domain Homepage](https://ejunz.com/d/A001/a001home)
+
+# Introduction
+A public domain for the Jacka CS team.
+
+# Features
+- Access to the latest news and updates
+- Tactical storage and discussion
+- Item storage and referencing
+
+# Roadmap
+- Simplify tactical plan referencing within space
+- Visualize item nodes and tactical plans
+- Assignable tactical roles
+
+# Screenshots
