Update(zh/en): entry

--- a/zh/entry/1.1-ahead.md
+++ b/zh/entry/1.1-ahead.md
@@ -3,3 +3,34 @@
 目的是方便各类用户开发，搭建，维护，扩展，配置自己想要的业务域。  
 各类用户在各种层面可以轻松实现不同程度的贡献。   
 这里的用户包括且不限于开发者，维护者，管理者，内容创造者，教师，组长，etc.
+
+# 入门须知
+本文档的使用被设计为循序渐进式的，所以理想上所有使用者应该先从用户层面上对易君进行学习和使用。随着实践和认识水平的提高，可以逐步迈向域管理者的方向进行学习和实践，接着再是集群管理者和领域管理者，最后再考虑进行对易君深度开发和定制。
+
+# 不同用户需求入口
+| 用户需求                                           | 推荐文档                 |
+|----------------------------------------------------|--------------------------|
+| 想要加入某些域                                     | **用户手册** + **域文档** |
+| 想要管理某些域                                     | **管理员手册**           |
+| 想要创立并管理属于自己的域                         | **管理员手册**           |
+| 想要开发插件并定制自己的域                         | **开发者手册**           |
+| 想要为核心代码进行贡献                             | **开发者手册**           |
+| 想要自己部署易君                                   | **开发者手册**           |
+| 想要深度开发易君                                   | **开发者手册**           |
+
+# 易君生态角色一览
+
+易君生态中的各类角色各司其职，协同构建系统的运转与发展。下表列出各角色的主要职责、权限边界以及入门难度，便于理解和分工。
+
+| 角色名称               | 职责描述                                                                 | 权限范围与操作能力                                          | 定位与建议人群                     | 入门难度 |
+|------------------------|--------------------------------------------------------------------------|-------------------------------------------------------------|------------------------------------|----------|
+| 用户                   | 加入不同的域以享受服务，提交任务或表单。                                 | 域内服务使用、流程参与                                     | 业务使用者、普通成员               | ★☆☆☆☆    |
+| 域管理者               | 配置插件与业务流程，管理用户与权限。                                     | 配置域插件、维护流程、分配权限                             | 单域管理、项目实施负责人           | ★★☆☆☆    |
+| 集群管理者             | 管理一个域下的多个子域（或节点）的部署与资源。         | 子域部署、资源隔离、域级集群运维                          | 多域管理者、横向技术负责人         | ★★★☆☆    |
+| 领域管理者             | 组织多个域为业务区块，推进业务协同与战略整合。                             | 区块级配置协调、跨域资源调度                               | 领域带头人、业务负责人             | ★★★★☆    |
+| 非核心代码贡献者       | 向公开插件（域插件等）提交改进与优化建议。                               | Git 提交插件代码、修复 BUG、优化逻辑                       | 外部开发者、技术爱好者             | ★★☆☆☆    |
+| 核心代码贡献者         | 对框架、系统插件或平台核心模块进行开发与维护。                           | 修改系统级插件、框架层代码，核心逻辑维护                   | 核心开发团队、平台架构师           | ★★★★★    |
+| 超级管理员（站长）     | 管理全平台域与系统插件配置，协调各域服务与用户权限。                     | 系统/域插件启停与配置、权限总控、跨域服务协调             | 平台运营者、站点管理员             | ★★★★☆    |
+| 超级管理员（DevOps）   | 具备代码与部署双重能力，开发、配置和管理整个平台。                       | 开发部署系统/域插件、全权限协同、全局资源调度              | DevOps 工程师、系统架构师           | ★★★★★    |
+
+> 提示：难度等级仅供参考，实际依赖于用户背景和参与深度。多个角色可以由同一人兼任，亦可按项目需要精简配置。
