--- a/en/domain_docs/A001.md
+++ b/en/domain_docs/A001.md
@@ -1,5 +1,5 @@
 # Jacka's CS Domain (ID: A001)
-[Domain Homepage](https://ejunz.com/d/A001/a001home)
+[Domain URL](https://ejunz.com/d/A001/a001home)
 
 # Introduction
 A public domain for the Jacka CS team.
