--- a/en/domain_docs/A003.md
+++ b/en/domain_docs/A003.md
@@ -1,5 +1,5 @@
 # Operation Delta-Force Domain (ID: A003)
-[Entry](https://ejunz.com/d/A003/)
+[Domain URL](https://ejunz.com/d/A003/)
 
 # Introduction
 A public Delta-Force domain
