--- a/en/domain_docs/Z003.md
+++ b/en/domain_docs/Z003.md
@@ -1,5 +1,5 @@
 # Anthropics Domain (ID: Z003)
-[Entry](https://ejunz.com/d/Z003/)
+[Domain URL](https://ejunz.com/d/Z003/)
 
 # Introduction
 A public Anthropics learning domain
