--- a/en/domain_docs/A002.md
+++ b/en/domain_docs/A002.md
@@ -1,5 +1,5 @@
 # Valorant Domain (ID: A002)
-[Entry](https://ejunz.com/d/A002/)
+[Domain URL](https://ejunz.com/d/A002/)
 
 # Introduction
 A public Valorant domain
