--- a/en/domain_docs/A004.md
+++ b/en/domain_docs/A004.md
@@ -1,5 +1,5 @@
 # EVE Online Domain (ID: A004)
-[Entry](https://ejunz.com/d/A004/)
+[Domain URL](https://ejunz.com/d/A004/)
 
 # Introduction
 A public domain for EVE Online
