--- a/en/domain_docs/B001.md
+++ b/en/domain_docs/B001.md
@@ -1,5 +1,5 @@
 # IELTS Domain (ID: B001)
-[Entry](https://ejunz.com/d/B001/)
+[Domain URL](https://ejunz.com/d/B001/)
 
 # Introduction
 A public IELTS learning domain
