--- a/en/domain_docs/Z001.md
+++ b/en/domain_docs/Z001.md
@@ -1,5 +1,5 @@
 # Celestics Domain (ID: Z001)
-[Entry](https://ejunz.com/d/Z001/)
+[Domain URL](https://ejunz.com/d/Z001/)
 
 # Introduction
 A public Celestics learning domain
