--- a/zh/domain_docs/B001.md
+++ b/zh/domain_docs/B001.md
@@ -5,14 +5,18 @@
 公开化的雅思学习域
 
 # 已经完成
+## 技术层
+- 
+
+## 内容层
 - 各题型入门
 - 笔记仓库
 - 资源仓库
 - 各层面用户不同训练方案
 
-# 域插件
-- 单词刷题（机考）
-
-# 搭建中
+### 技术搭建中
 - 快速资源存储与引用
 - 监听资源动态更新
+
+### 内容建设中
+- 单词刷题（机考）
