--- a/zh/domain_docs/B001.md
+++ b/zh/domain_docs/B001.md
@@ -2,17 +2,12 @@
 [入口](https://ejunz.com/d/B001/)
 
 # 介绍
-公开化的雅思学习域
+公开化的雅思学习域，引入Jacka的雅思学习训练框架，并给予学员高度扩展框架的自由度。
 
-# 已经完成
-## 技术层
-- 
-
-## 内容层
-- 各题型入门
+# 域特色
+- 各题型入门，进阶，拔尖
 - 笔记仓库
 - 资源仓库
-- 各层面用户不同训练方案
 
 ### 技术搭建中
 - 快速资源存储与引用
