--- a/zh/domain_docs/B001.md
+++ b/zh/domain_docs/B001.md
@@ -8,18 +8,21 @@
 - 各题型入门，进阶，拔尖
 - 笔记仓库
 - 资源仓库
-- 小作文框架体系(入门，范文，训练，好词，好句）
+- 小作文框架体系
 - 大作文框架体系
 - 口语Part框架体系
 - 口语Part2/3框架体系
+- 定制化的个人专属学习框架,训练计划和迭代笔记
 
 ### 技术搭建中
 - 快速资源存储与引用
 - 监听资源动态更新
 - 文档索引（repo->branch）
+- 单词刷题（机考）
 
 ### 内容建设中
-- 单词刷题（机考）
+- 作文与口语的训练流
+
 
 ### 概念层
 - 准备搭建模版化的tree，学员直接fork即可
