--- a/zh/domain_docs/B001.md
+++ b/zh/domain_docs/B001.md
@@ -21,11 +21,9 @@
 - 文档索引（repo->branch）
 - 单词刷题（机考）
 
-### 内容建设中
-- 作文与口语的训练流
-
-
 ### 概念层
 - 准备搭建模版化的tree，学员直接fork即可
 - 自定义训练流
 - 部分接入ai进行口语测试
+- 引入流的概念，以path的方式呈现
+- 增加购买和消费接口
