--- a/zh/domain_docs/B001.md
+++ b/zh/domain_docs/B001.md
@@ -5,14 +5,46 @@
 公开化的雅思学习域，引入Jacka的雅思学习训练框架，并给予学员高度扩展框架的自由度。
 
 # 域特色
+## 听力
+- 各类题型的方法
+- 例题及训练
+## 阅读
+- 各类题型的方法
+- 例题及训练
+## 写作
+### 小作文
+- 各类题型框架
+- 模版作文
+- 模版句型
+### 大作文
+- 文章类型与段落分配
+- 组织单个段落的方法
+- 核心词现象以及解释
+- 万用逻辑链
+- 句群ABC组件
+- 语法升级
+
+## 口语
+### Part1
+- 万能个人原因
+- 流利度链接
+- Part1下位词
+
+### Part2
+- 万能串题故事
+- 串题示范
+
+### Part3
+- 题目类型判断以及应对的回答结构
+- p3季度题库对应话题上下文
+- 常用逻辑链
+
+## 语法
+
+
 - 各题型入门，进阶，拔尖
 - 笔记仓库
 - 资源仓库
-- 小作文框架体系
-- 大作文框架体系
-- 口语Part框架体系
-- 口语Part2框架体系
-- 口语Part3框架体系
 - 定制化的个人专属学习框架,训练计划和迭代笔记
 - 专业的定制听说读写训练方案
 
