--- a/zh/domain_docs/B001.md
+++ b/zh/domain_docs/B001.md
@@ -16,6 +16,7 @@
 - 各类题型框架
 - 模版作文
 - 模版句型
+- 模版题训练流
 ### 大作文
 - 文章类型与段落分配
 - 组织单个段落的方法
@@ -23,21 +24,25 @@
 - 万用逻辑链
 - 句群ABC组件
 - 语法升级
+- 高频题训练流
 
 ## 口语
 ### Part1
 - 万能个人原因
 - 流利度链接
 - Part1下位词
+- 三大类型训练流
 
 ### Part2
 - 万能串题故事
 - 串题示范
+- 三大难度训练流
 
 ### Part3
 - 题目类型判断以及应对的回答结构
 - p3季度题库对应话题上下文
 - 常用逻辑链
+- 各话题训练流
 
 ## 语法
 
