--- a/zh/domain_docs/B001.md
+++ b/zh/domain_docs/B001.md
@@ -8,6 +8,8 @@
 ## 听力
 - 各类题型的方法
 - 例题及训练
+- 听力常考单词
+
 ## 阅读
 - 各类题型的方法
 - 例题及训练
@@ -25,6 +27,7 @@
 - 句群ABC组件
 - 语法升级
 - 高频题训练流
+- 话题分类题库
 
 ## 口语
 ### Part1
@@ -45,7 +48,8 @@
 - 各话题训练流
 
 ## 语法
-
+- 按照口语/作文功能来分类
+- 复合/复杂句
 
 - 各题型入门，进阶，拔尖
 - 笔记仓库
